--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cosmos-kit/keplr": "^2.6.9",
+    "@cosmos-kit/keplr-extension": "^2.7.9",
+    "@cosmos-kit/react": "^2.10.11",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@rainbow-me/rainbowkit": "^2.0.5",
@@ -16,6 +19,7 @@
     "@web3modal/wagmi": "^4.1.5",
     "alchemy-sdk": "^3.2.1",
     "axios": "^1.6.8",
+    "chain-registry": "^1.33.22",
     "chart.js": "^4.4.2",
     "next": "14.1.4",
     "react": "^18",
